--- a/carrito.html
+++ b/carrito.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="texto-footer">© 2022 Carpi Coder</p>
+                <p class="texto-footer">© hecho en curso de javascript</p>
             </footer>
         </aside>
         <main>
