--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="wrapper">
         <aside>
             <header>
-                <div id="WidgetTutiempo"></div>
+               
                 <div id="hora" class="hora"></div>
-                <h1 class="logo">intercomers</h1>
+                <!-- <h1 class="logo">intercomers</h1> -->
             </header>
             <nav>
                 <ul class="menu">
